--- a/src/app/components/status-article/status-article.component.html
+++ b/src/app/components/status-article/status-article.component.html
@@ -12,7 +12,7 @@
       <div class="col-md-12">
         <div class="form-group mb-4">
           <p class="font-strong">Statut</p>
-          <ng-select name="status" placeholder="Choississez un status"
+          <ng-select placeholder="Choississez un status"
                      formControlName="status" bindLabel="value" bindValue="key"
                      [hideSelected]="false" [multiple]="false" [items]="inputStatus">
           </ng-select>
