--- a/src/app/components/status-quotation-switcher/status-quotation-switcher.component.html
+++ b/src/app/components/status-quotation-switcher/status-quotation-switcher.component.html
@@ -33,7 +33,7 @@
       </div>
       <div class="modal-footer justify-content-between bg-primary-50">
         <div>
-          <button class="btn btn-primary mr-3" type="submit" [disabled]="loading">
+          <button class="btn btn-primary mr-3" type="submit">
             <span>Enregistrer</span>
           </button>
         </div>
