--- a/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
+++ b/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
@@ -27,8 +27,8 @@
 <div class="ibox-footer">
   <div>
     <div class="btn-group mb-3">
-      <button class="btn btn-info mr-3" data-toggle="modal" data-target="#quotation-view-modal">Afficher la demande</button>
-      <a class="btn btn-secondary mr-3" [routerLink]="['/dashboard', 'quotation', ID, 'recap']" routerLinkActive="active" >Récapitulatif</a>
+      <button class="btn btn-pink mr-3" data-toggle="modal" data-target="#quotation-view-modal">Voir le devis</button>
+      <a class="btn btn-blue mr-3" [routerLink]="['/dashboard', 'quotation', ID, 'recap']" routerLinkActive="active" >Récapitulatif</a>
       <a class="btn btn-secondary" [routerLink]="['/dashboard']" routerLinkActive="active" >Retour</a>
     </div>
   </div>
@@ -40,7 +40,7 @@
 <div class="modal fade" id="quotation-view-modal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <app-quotation-view [order]="__ORDER__"></app-quotation-view>
+      <app-quotation-view [order]="ORDER"></app-quotation-view>
     </div>
   </div>
 </div>
@@ -49,7 +49,7 @@
 <div class="modal fade" id="quotation-mail-modal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <app-quotation-mail [order]="__ORDER__"></app-quotation-mail>
+      <app-quotation-mail [order]="ORDER"></app-quotation-mail>
     </div>
   </div>
 </div>
