--- a/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
+++ b/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
@@ -16,7 +16,7 @@
           <div class="col-sm-4">
             <div class="form-group">
               <div class="input-group">
-                <input class="form-control" (change)="onUpdateFakeDiscount($event)" formControlName="dFake" type="text"
+                <input class="form-control" (change)="onSetFakeDiscount($event)" formControlName="dFake" type="text"
                   placeholder="Faux remise">
               </div>
               <!-- 
