--- a/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
+++ b/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
@@ -30,7 +30,7 @@
             <div class="form-group">
               <label class="checkbox checkbox-outline-danger">
                 <input type="checkbox" formControlName="hasDiscount" (change)="onChangehasDiscount($event)">
-                <span class="input-span"></span>Ajouter la remise pour cette article</label>
+                <span class="input-span"></span>Ajouter la remise à cet article</label>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
           <th>PRIX</th>
           <th>ARTICLE</th>
           <th class="pr-4" style="width:80px;">QTÉ</th>
-          <th class="pr-4" style="width:90px;">REMISE (AR)</th>
+          <th class="pr-4" style="width:90px;">RAJOUT (AR)</th>
         </tr>
       </thead>
     </table>
