--- a/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
+++ b/src/app/pages/quotation/quotation-edit/quotation-edit.component.html
@@ -14,8 +14,8 @@
       <thead class="thead-default thead-lg">
         <tr>
           <th class="pl-4">DESIGNATION</th>
-          <th>QTÉ CLT</th>
-          <th>QTÉ DSP</th>
+          <th>QTÉ VOULU</th>
+          <th>QTÉ DISP</th>
           <th>ÉTAT</th>
           <th>FOURNISSEUR</th>
           <th class="pr-4" style="width:91px;"></th>
