--- a/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
+++ b/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
@@ -23,10 +23,10 @@
               <span class="input-span"></span>Aucun</label>
             <label class="radio radio-grey radio-primary radio-inline">
               <input type="radio" formControlName="discount_type" value="1">
-              <span class="input-span"></span>Remise</label>
-            <label class="radio radio-grey radio-primary radio-inline">
+              <span class="input-span"></span>Ajouter une remise</label>
+            <!-- <label class="radio radio-grey radio-primary radio-inline">
               <input type="radio" formControlName="discount_type" value="2">
-              <span class="input-span"></span>Rajout</label>
+              <span class="input-span"></span>Rajout</label> -->
           </div>
 
         </div>
