--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -69,7 +69,7 @@
   <li routerLinkActive="active">
     <a href="href=&quot;javascript:;&quot;">
       <i class="sidebar-item-icon ti-layout-media-overlay-alt-2"></i>
-      <span class="nav-label">Services</span>
+      <span class="nav-label">S.A.V</span>
       <i class="fa fa-angle-left arrow"></i>
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
