--- a/src/app/pages/dashboard-7/dashboard-7.component.html
+++ b/src/app/pages/dashboard-7/dashboard-7.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-lg-4">
       <app-modulo-review-suppliers></app-modulo-review-suppliers>
-      <app-new-customer></app-new-customer>
+      <!-- <app-new-customer></app-new-customer> -->
     </div>
   </div>
 </div>
