--- a/src/app/pages/supplier/articles/article-supplier/article-supplier.component.html
+++ b/src/app/pages/supplier/articles/article-supplier/article-supplier.component.html
@@ -25,12 +25,12 @@
                   <th>Image</th>
                   <th>Designation</th>
                   <th>Statut</th>
-                  <th>Prix</th>
-                  <th>Prix P.</th>
+                  <th>Prix de vente</th>
+                  <th>Prix Part.</th>
                   <th>%UF</th>
                   <th>Prix UF</th>
                   <th>%R</th>
-                  <th>Prix R</th>
+                  <th>Prix Rev.</th>
                   <th>F.</th>
                   <th></th>
                 </tr>
