--- a/src/app/pages/supplier/articles/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/articles/edit-article/edit-article.component.html
@@ -73,7 +73,6 @@
                 <label>Prix de vente UF</label>
                 <input class="form-control" onkeypress="return false;" min="0" formControlName="pricePro" type="number"
                   id="price_uf" placeholder="">
-                <p class="help-block font-11">Le prix est en Ariary</p>
               </div>
             </div>
             <div class="col-sm-6">
@@ -160,7 +159,7 @@
         </div>
       </div>
       <div class="text-muted font-11">
-        Sed tristique lacinia enim, sit amet consequat ante suscipit at. Quisque a eros vitae elit molestie tristique.
+        Les prix sont en Ariary
       </div>
 
     </div>
