--- a/src/app/components/status-quotation-switcher/status-quotation-switcher.component.html
+++ b/src/app/components/status-quotation-switcher/status-quotation-switcher.component.html
@@ -19,8 +19,8 @@
                 <select class="form-control" name="type" formControlName="status">
                   <option value="">Selectionner un statut</option>
                   <option value="0">En attente</option>
-                  <option value="2">Rejetés</option>
-                  <option value="1">Envoyer</option>
+                  <!-- <option value="2">Rejetés</option> -->
+                  <!--<option value="1">Envoyer</option>-->
                   <option value="3">Terminée</option>
                 </select>
                 <!-- <span class="help-block mt-2">This is some placeholder block-level help text for the above input.</span> -->
