--- a/src/app/components/modulo-review-suppliers/modulo-review-suppliers.component.html
+++ b/src/app/components/modulo-review-suppliers/modulo-review-suppliers.component.html
@@ -1,6 +1,6 @@
 <div class="ibox">
   <div class="ibox-head">
-    <div class="ibox-title">FOURNISSEURS EN ATTENTE</div>
+    <div class="ibox-title">ARTICLES EN ATTENTE</div>
   </div>
   <div class="ibox-body">
     <ul class="media-list media-list-divider mr-2 scroller" data-height="400px">
