--- a/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
+++ b/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
@@ -36,7 +36,7 @@
           <div class="ibox-head">
             <div class="ibox-title uppercase">Le résultat de la consultation</div>
           </div>
-          <app-quotation-custom (selectQt)="setQtSelected($event)" [refresh]="refreshQuotatuon" [Position]="[3, 2]" [Balise]="'pro_terminate'"
+          <app-quotation-custom (selectQt)="setQtSelected($event)" [refresh]="refreshQuotatuon" [Position]="[4, 3, 2]" [Balise]="'pro_terminate'"
             [Role]="'fz-company'">
           </app-quotation-custom>
         </div>
@@ -65,7 +65,7 @@
           <div class="ibox-head">
             <div class="ibox-title uppercase">Le résultat de la consultation</div>
           </div>
-          <app-quotation-custom (selectQt)="setQtSelected($event)" [refresh]="refreshQuotatuon" [Position]="[3, 2]" [Balise]="'pa_terminate'"
+          <app-quotation-custom (selectQt)="setQtSelected($event)" [refresh]="refreshQuotatuon" [Position]="[4, 3, 2]" [Balise]="'pa_terminate'"
             [Role]="'fz-particular'">
           </app-quotation-custom>
         </div>
