--- a/src/app/components/accepted-item-suppliers/accepted-item-suppliers.component.html
+++ b/src/app/components/accepted-item-suppliers/accepted-item-suppliers.component.html
@@ -21,7 +21,16 @@
 <div class="modal fade" id="suppliers-item-modal" data-backdrop="static">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-
+      <table class="table table-hover" id="item-table">
+        <thead class="thead-default thead-lg">
+            <tr>
+                <th class="pl-4">ID</th>
+                <th>Designation</th>
+                <th>Qté demandée</th>
+                <th>Prix</th>
+            </tr>
+        </thead>
+    </table>
     </div>
   </div>
 </div>
