--- a/src/app/components/accepted-item-suppliers/accepted-item-suppliers.component.html
+++ b/src/app/components/accepted-item-suppliers/accepted-item-suppliers.component.html
@@ -9,9 +9,10 @@
         <div class="media-body d-flex align-items-center">
           <div class="flex-1">
             <div class="media-heading">{{supplier.reference}}</div>
-            <small class="text-muted">{{supplier.email}}</small>
+            <!-- <small class="text-muted">{{supplier.data.user_email}}</!-->
           </div>
-          <button class="btn btn-sm btn-outline-secondary btn-rounded" (click)="onMail(supplier.id)">Voir les articles</button>
+          <button class="btn btn-sm btn-outline-secondary btn-rounded" (click)="onMail(supplier.ID)">Voir les
+            articles</button>
         </div>
       </li>
     </ul>
@@ -21,16 +22,27 @@
 <div class="modal fade" id="suppliers-item-modal" data-backdrop="static">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <table class="table table-hover" id="item-table">
-        <thead class="thead-default thead-lg">
+      <div class="modal-header">
+        <h5 class="modal-title">Les articles du fournisseur</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <table class="table table-hover" id="item-table">
+          <thead class="thead-default thead-lg">
             <tr>
-                <th class="pl-4">ID</th>
-                <th>Designation</th>
-                <th>Qté demandée</th>
-                <th>Prix</th>
+              <th class="pl-4">ID</th>
+              <th>Designation</th>
+              <th>Qté demandée</th>
+              <th>Prix</th>
             </tr>
-        </thead>
-    </table>
+          </thead>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+      </div>
     </div>
   </div>
 </div>
