Add route catalog

--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -78,6 +78,12 @@
     </ul>
   </li>
   <li routerLinkActive="active">
+    <a [routerLink]="['/prestations']" routerLinkActive="active" >
+      <i class="sidebar-item-icon ti-layout-tab-v"></i>
+      <span class="nav-label">Prestations</span>
+    </a>
+  </li>
+  <li routerLinkActive="active">
     <a [routerLink]="['/faq']" routerLinkActive="active" >
       <i class="sidebar-item-icon ti-help-alt"></i>
       <span class="nav-label">Techniques de vente</span>
