--- a/src/app/pages/prestations/prestations.component.html
+++ b/src/app/pages/prestations/prestations.component.html
@@ -2,12 +2,15 @@
 <div class="ibox">
   <div class="ibox-body">
     <div class="row">
+      <div class="col-sm-4">
+        <button class="btn btn-primary btn-sm" (click)="newCategorie()">Ajouter une categorie</button>
+      </div>
       <div class="col-sm-12">
         <table class="table table-hover" id="categories-table">
           <thead class="thead-default thead-lg">
             <tr>
               <th>Designation</th>
-              <th>Plates-formes</th>
+              <th>Plate-formes</th>
               <th>Prix</th>
               <th>Observation</th>
               <th></th>
