--- a/src/app/pages/prestations/prestations.component.html
+++ b/src/app/pages/prestations/prestations.component.html
@@ -3,7 +3,7 @@
   <div class="ibox-body">
     <div class="row">
       <div class="col-sm-4">
-        <button class="btn btn-primary btn-sm" (click)="newCategorie()">Ajouter une categorie</button>
+        <button class="btn btn-primary btn-sm" (click)="newCategorie()">Ajouter une prestation</button>
       </div>
       <div class="col-sm-12">
         <table class="table table-hover" id="categories-table">
