--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -70,7 +70,7 @@
                             </td>
                             <td class="text-center">{{item.quantity}}</td>
                             <td>{{item.priceFn() | currency:'MGA':'symbole':'4.2-2':'fr'}}</td>
-                            <td>{{item.discountFn() === 0 ? '-' : item.discountFn() + '%'}}</td>
+                            <td>{{item.discountTypeFn() === 0 ? '-' : item.discountFn() + '%'}}</td>
                             <td class="text-right pr-4">{{item.subTotalNetFn() | currency:'MGA':'symbole':'4.2-2':'fr'}}</td>
                         </tr>
                     </tbody>
