--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -38,6 +38,7 @@
     </a>
     <ul class="nav-2-level collapse" routerLinkActive="in">
       <li><a routerLink="/articles" routerLinkActive="active">Tous les articles</a></li>
+      <li><a routerLink="/product" routerLinkActive="active">Gestions des produits</a></li>
       <li><a routerLink="/supplier/article/review" routerLinkActive="active">Attente de MAJ</a></li>
     </ul>
   </li>
